工程中静态文件的获取

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -3,10 +3,10 @@
 <title>表白</title>
 <!--引入开始-->
  
-<link rel="stylesheet" type="text/css" href="allCss/style/style.css">
-<link rel="stylesheet" type="text/css" href="allJs/bootstrap3.3.6/css/bootstrap.css">
-<script type="text/javascript" src="allJs/jquery.2.1.4/jquery.js"></script>
-<script type="text/javascript" src="allJs/bootstrap3.3.6/js/bootstrap.css"></script>
+<link rel="stylesheet" type="text/css" href="allCss/style.css">
+<link rel="stylesheet" type="text/css" href="allJs/bootstrap/3.3.6/css/bootstrap.css">
+<script type="text/javascript" src="allJs/jquery/2.1.4/jquery.js"></script>
+<script type="text/javascript" src="allJs/bootstrap/3.3.6/js/bootstrap.js"></script>
 
 <!--引入结束-->
 </head>  
@@ -14,7 +14,7 @@
 	 
 		<!-- 代码开始 -->
 		<div id="loginbody">
-		    <div id="background" style="width:100%;height:100%;background:black;background-image:url(imag/01.JPG);">
+		    <div id="background" style="width:100%;height:100%;background:black;background-image:url(allImages/imag/01.JPG);">
 		    	<div id="login" style="box-sizing:border-box;
 				border-radius: 20px;
 				transition: box-shadow linear 1s;
@@ -24,7 +24,8 @@
 						<div class="form-group">
 							<label class="col-md-4" style="font-size:22px;font-family: 楷体;margin-top: 5px">登陆名</label>
 							<div class="col-md-8">
-								<input type="text" class="form-control" id="name"  style="background-color: #000000;border-radius:10px solid red;"
+								<input type="text" class="form-control" id="name"
+									   style="background-color: #000000;border-radius:10px solid red;"
 								   placeholder="请输入名称">
 						    </div>
 						</div>
@@ -39,7 +40,7 @@
 			var add = true; 
 			var changeColor = function() {
 				$("#login").css("box-shadow", '0 0 40px' + color[colorid]);
-				$("#background").css("background-image", 'url(imag/0' + colorid +".JPG");
+				$("#background").css("background-image", 'url(allImages/imag/0' + colorid +".JPG");
 				if (colorid == 3) {
 					add = false;
 					colorid --;
