--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <title>Spring Security入门</title>
 </head>
 <body>
-<h1>欢迎使用Spring Security!</h1>
+<h1>欢迎使用ssSpring Security!</h1>
 <p>点击 <a th:href="@{/hello}">这里</a> 打个招呼吧</p>
 </body>
 </html>
